feat: socket events and group manaegemnt
